objects/MyCustomer__c.object
<CustomObject>
    <fields>
        <fullName>CityName__c</fullName>
        <label>CityName</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAIL__c</fullName>
        <defaultValue>&apos;no@gmail.com&apos;</defaultValue>
        <label>EMAIL</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_no__c</fullName>
        <label>Phone no</label>
        <type>Phone</type>
    </fields>
    <label>MyCustomer</label>
    <nameField>
        <label>MyCustomer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyCustomers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>